add new Record DB historical data

--- a/app/src/main/res/layout/activity_product_add.xml
+++ b/app/src/main/res/layout/activity_product_add.xml
@@ -693,6 +693,11 @@
                 android:background="@android:color/transparent"
                 android:text="TextView" />
 
+            <EditText
+                android:id="@+id/historical_data"
+                android:layout_width="wrap_content"
+                android:text="Description" />
+
         </TableLayout>
 
     </ScrollView>
