improved record adding view

--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -85,7 +85,7 @@
 
 
         <TextView
-            android:id="@+id/commentaryInPL"
+            android:id="@+id/plantation_area"
             android:text="Growing area" />
     </TableRow>
 
