--- a/app/src/main/res/layout/activity_product__update.xml
+++ b/app/src/main/res/layout/activity_product__update.xml
@@ -255,6 +255,16 @@
                         android:text="Subgrupa EN"
                         android:textColor="#000000"
                         android:textSize="16dp"></TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Kontrakt"
+                        android:textColor="#000000"
+                        android:textSize="16dp"></TextView>
                 </TableRow>
 
                 <TableRow
@@ -291,6 +301,16 @@
                         android:gravity="center"
                         android:padding="5dp"
                         android:text="subgrupa ID"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="#000000"></EditText>
+                    <EditText
+                        android:id="@+id/contract"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Kontrakt"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
                 </TableRow>
@@ -341,6 +361,15 @@
                         android:text="Symbol"
                         android:textColor="	#000000"
                         android:textSize="16dp"></TextView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Pow.Plantacji"
+                        android:textColor="	#000000"
+                        android:textSize="16dp"></TextView>
                 </TableRow>
 
                 <TableRow
@@ -356,7 +385,7 @@
                         android:padding="5dp"
                         android:text="kolor ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="	#000000"></EditText>
+                        android:textColor="	#000000"/>
 
                     <EditText
                         android:id="@+id/estimated_crop"
@@ -367,7 +396,7 @@
                         android:padding="5dp"
                         android:text="szacowany plon ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="	#000000"></EditText>
+                        android:textColor="	#000000"/>
 
                     <EditText
                         android:id="@+id/symbol"
@@ -378,7 +407,17 @@
                         android:padding="5dp"
                         android:text="subgrupa ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="	#000000"></EditText>
+                        android:textColor="	#000000"/>
+                    <EditText
+                        android:id="@+id/plantation_area"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Pow. Plantacji"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="	#000000"/>
                 </TableRow>
             </TableLayout>
 
@@ -482,7 +521,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="Opis plantacji "
+                        android:text="Dane Historyczne "
                         android:textColor="	#000000"
                         android:textSize="16dp"></TextView>
 
@@ -500,7 +539,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="Typowa"
+                        android:text="Dane Historyczne"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="	#000000"></EditText>
 
@@ -628,6 +667,16 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        />
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -638,6 +687,11 @@
                         android:textColor="	#000000"
                         android:onClick="saveAndExportFile"
                         android:textSize="16dp"></Button>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -668,6 +722,11 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        />
 
                     <Button
                         android:background="@drawable/ic_gallery"
@@ -679,6 +738,16 @@
                         android:onClick="opegnJPG"
                         android:textColor="	#000000"
                         android:textSize="16dp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -752,21 +821,7 @@
 
             </TableRow>
 
-            <TableRow
-                android:background="@android:color/transparent"
-                android:padding="5dp">
 
-
-                <EditText
-                    android:id="@+id/commentaryInPL"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="Comment"
-                    android:textColor="@android:color/transparent" />
-
-            </TableRow>
 
             <TableRow
 
