--- a/app/src/main/res/layout/activity_product_add.xml
+++ b/app/src/main/res/layout/activity_product_add.xml
@@ -98,7 +98,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="name ID"
+                        android:hint="name ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
 
@@ -109,7 +109,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="producent ID"
+                        android:hint="producent ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
 
@@ -120,7 +120,7 @@
                         android:layout_weight="3"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="numert reprodukcji OD"
+                        android:hint="numert reprodukcji OD"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
                 </TableRow>
@@ -183,7 +183,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="nasiona wlasne ID"
+                        android:hint="nasiona wlasne ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
 
@@ -194,7 +194,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="nazwa łacinska ID"
+                        android:hint="nazwa łacinska ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
 
@@ -205,7 +205,7 @@
                         android:layout_weight="3"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="numert reprodukcji OD"
+                        android:hint="numert reprodukcji OD"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
                 </TableRow>
@@ -278,7 +278,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="partia ID"
+                        android:hint="partia ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
 
@@ -289,7 +289,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="grupa ID"
+                        android:hint="grupa ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
 
@@ -300,7 +300,7 @@
                         android:layout_weight="3"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="subgrupa ID"
+                        android:hint="subgrupa ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
                     <EditText
@@ -310,7 +310,7 @@
                         android:layout_weight="3"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="Kontrakt"
+                        android:hint="Kontrakt"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
                 </TableRow>
@@ -383,7 +383,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="kolor ID"
+                        android:hint="kolor ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="	#000000"/>
 
@@ -394,7 +394,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="szacowany plon ID"
+                        android:hint="szacowany plon ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="	#000000"/>
 
@@ -405,7 +405,7 @@
                         android:layout_weight="3"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="subgrupa ID"
+                        android:hint="subgrupa ID"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="	#000000"/>
                     <EditText
@@ -415,7 +415,7 @@
                         android:layout_weight="3"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="Pow. Plantacji"
+                        android:hint="Pow. Plantacji"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="	#000000"/>
                 </TableRow>
@@ -539,7 +539,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="Dane Historyczne"
+                        android:hint="Dane Historyczne"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="	#000000"></EditText>
 
@@ -550,6 +550,55 @@
             </TableLayout>
             <Space android:layout_height="12dp"></Space>
 
+            -----------------------------------------------------------------------------------------
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#DAE8FC"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#3da549">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Ostatnio dodany "
+                        android:textColor="	#000000"
+                        android:textSize="16dp"></TextView>
+
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:hint="Ostatnio dodany"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="	#000000"></TextView>
+
+
+                </TableRow>
+
+
+            </TableLayout>
+
+            <Space android:layout_height="12dp"></Space>
             -----------------------------------------------------------------------------------------
 
             <TableLayout
@@ -582,13 +631,13 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/description"
+                        android:id="@+id/recently_added"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="Typowa"
+                        android:hint="Typowa"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="	#000000"></EditText>
 
@@ -597,7 +646,6 @@
 
 
             </TableLayout>
-
 
             -----------------------------------------------------------------------------------------
 
