--- a/app/src/main/res/layout/activity_product__update.xml
+++ b/app/src/main/res/layout/activity_product__update.xml
@@ -205,7 +205,7 @@
                         android:layout_weight="3"
                         android:gravity="center"
                         android:padding="5dp"
-                        android:text="numert reprodukcji OD"
+                        android:text="odmiana"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="#000000"></EditText>
                 </TableRow>
@@ -819,7 +819,10 @@
                 android:orientation="vertical"
                 tools:context="com.GallegryImgActivity">
 
-
+<EditText
+    android:id="@+id/descriptionInPL"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"/>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
