--- a/app/src/main/res/layout/activity_product__update.xml
+++ b/app/src/main/res/layout/activity_product__update.xml
@@ -3,6 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="false">
 
 
@@ -803,6 +804,62 @@
                         />
                 </TableRow>
             </TableLayout>
+            <RelativeLayout
+                android:background="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/head"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    app:cardBackgroundColor="@color/black">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|start"
+                        android:text="photos_name"
+                        android:textColor="@color/white"
+                        android:textSize="35sp"
+                        android:textStyle="bold"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="10dp" />
+
+
+                    <ImageButton
+                        android:id="@+id/menu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_action_menu"
+                        android:tint="@color/white" />
+
+
+                </androidx.cardview.widget.CardView>
+
+                <com.utils.AutoFitRecyclerView
+                    android:id="@+id/folderRecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/black"
+                    android:columnWidth="@dimen/folder_column_width"
+                    android:clipToPadding="false"
+                    android:layout_below="@id/head">
+
+                    <!--app:fastScrollEnabled="true"
+               app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
+               app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
+               app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
+               app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"-->
+
+                </com.utils.AutoFitRecyclerView>
+
+            </RelativeLayout>
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="418dp"
