--- a/app/src/main/res/layout/indicator_holder.xml
+++ b/app/src/main/res/layout/indicator_holder.xml
@@ -28,7 +28,7 @@
                 android:background="@color/cardview_shadow_start_color"
                 android:padding="5dp"
                 android:scaleType="centerCrop"
-
+                app:srcCompat="@drawable/smoke"
                 tools:ignore="ContentDescription" />
 
             <View
