--- a/app/src/main/res/layout/picture_browser.xml
+++ b/app/src/main/res/layout/picture_browser.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@color/black"
     android:animateLayoutChanges="true">
 
   <androidx.cardview.widget.CardView
@@ -21,7 +21,8 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@android:color/transparent"
-
+          android:src="@drawable/ic_action_menu"
+          android:tint="@color/white"
           android:layout_centerVertical="true"
           android:layout_alignParentEnd="true"
           android:layout_alignParentRight="true"
