--- a/app/src/main/res/layout/picture_browser_pager.xml
+++ b/app/src/main/res/layout/picture_browser_pager.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        app:srcCompat="@drawable/smoke"
         android:id="@+id/image" />
 
 
