--- a/app/src/main/res/layout/activity_product__update.xml
+++ b/app/src/main/res/layout/activity_product__update.xml
@@ -760,6 +760,7 @@
                         android:gravity="center"
                         android:padding="5dp"
                         android:textColor="	#000000"
+                        android:onClick="onCaptureButton"
                         android:textSize="16dp"></Button>
                     <TextView
                         android:layout_width="wrap_content"
