--- a/app/src/main/res/layout-v17/activity_new_meniu.xml
+++ b/app/src/main/res/layout-v17/activity_new_meniu.xml
@@ -27,22 +27,21 @@
         android:layout_height="271dp"
         app:layout_constraintBottom_toTopOf="@+id/circle_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.532"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.53"
+        app:layout_constraintVertical_bias="0.734"
         app:srcCompat="@drawable/legutko" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="943dp"
         android:layout_height="523dp"
-        android:layout_marginTop="572dp"
+        android:layout_marginTop="644dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.373"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:srcCompat="@drawable/grass" />
+        app:srcCompat="@drawable/grass_bez_tla" />
 
     <Button
         android:id="@+id/angry_btn"
