--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -33,7 +33,7 @@
 
         <TextView
             android:layout_marginRight="15dp"
-            android:text="Manufacturer" />
+            android:text="Producent" />
 
         <TextView
             android:id="@+id/producer"
@@ -49,7 +49,7 @@
 
         <TextView
             android:layout_marginRight="15dp"
-            android:text="Reproduction Number" />
+            android:text="Numer Reprodukcji" />
 
         <TextView
             android:id="@+id/code"
@@ -65,12 +65,12 @@
 
         <TextView
             android:layout_marginRight="15dp"
-            android:text="Type" />
+            android:text="Nazwa łać." />
 
 
         <TextView
             android:id="@+id/species"
-            android:text="Species" />
+            android:text="Gatunek" />
     </TableRow>
 
 
@@ -84,7 +84,7 @@
 
     <TextView
         android:layout_marginRight="15dp"
-        android:text="Type of crop Typical / Unusual" />
+        android:text="Plantacja Typowa/Nietypowa" />
 
     <TextView
         android:id="@+id/standard_plantation"
@@ -118,7 +118,7 @@
 
         <TextView
             android:layout_marginRight="15dp"
-            android:text="Party" />
+            android:text="Partia" />
         <TextView
             android:id="@+id/batch"
             android:layout_marginRight="15dp"
@@ -133,11 +133,26 @@
 
         <TextView
             android:layout_marginRight="15dp"
-            android:text="Sowing location" />
+            android:text="Miejsce siewu" />
 
 
         <TextView
             android:id="@+id/comment"
             android:text="Growing area" />
+    </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp">
+
+        <TextView
+            android:layout_marginRight="15dp"
+            android:text="Kontrakt" />
+
+
+        <TextView
+            android:id="@+id/contract"
+            android:text="BRAK" />
     </TableRow>
 </TableLayout>
